--- a/package.json
+++ b/package.json
@@ -1,75 +1,1 @@
-{
-  "name": "greyhounds-inventory",
-  "productName": "Greyhounds Telangana",
-  "private": true,
-  "version": "1.0.0",
-  "description": "Greyhounds Telangana Workshop Inventory Management System",
-  "type": "module",
-  "main": "electron/main.cjs",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "electron:dev": "concurrently \"vite --port 3000\" \"wait-on http://localhost:3000 && cross-env NODE_ENV=development electron .\"",
-    "electron:build": "vite build && electron-builder --win --x64",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
-  },
-  "dependencies": {
-    "axios": "^1.6.7",
-    "better-sqlite3": "^9.6.0",
-    "cors": "^2.8.5",
-    "express": "^4.18.3",
-    "lucide-react": "^0.322.0",
-    "multer": "^1.4.5-lts.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.0",
-    "recharts": "^2.12.0",
-    "xlsx": "^0.18.5"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "concurrently": "^8.2.2",
-    "cross-env": "^7.0.3",
-    "electron": "^29.1.0",
-    "electron-builder": "^24.9.1",
-    "eslint": "^8.56.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^5.1.0",
-    "wait-on": "^7.2.0"
-  },
-  "build": {
-    "appId": "com.greyhounds.inventory",
-    "productName": "Greyhounds Telangana",
-    "directories": {
-      "output": "dist-electron"
-    },
-    "files": [
-      "dist/**/*",
-      "electron/**/*",
-      "node_modules/**/*",
-      "package.json"
-    ],
-    "extraFiles": [],
-    "win": {
-      "target": "zip",
-      "icon": "electron/gt_logo.ico"
-    },
-    "npmRebuild": false,
-    "nsis": {
-      "oneClick": true,
-      "allowToChangeInstallationDirectory": true,
-      "createDesktopShortcut": true,
-      "createStartMenuShortcut": true,
-      "shortcutName": "Greyhounds Telangana"
-    },
-    "asar": true,
-    "asarUnpack": [
-      "node_modules/better-sqlite3/**/*"
-    ]
-  }
-}
+{"name":"greyhounds-inventory","productName":"Greyhounds Telangana","private":true,"version":"1.0.0","description":"Greyhounds Telangana Workshop Inventory Management System","type":"module","main":"electron/main.cjs","scripts":{"dev":"vite","build":"vite build","preview":"vite preview","electron:dev":"concurrently \"vite --port 3000\" \"wait-on http://localhost:3000 && cross-env NODE_ENV=development electron .\"","electron:build":"vite build && electron-builder --win --x64","lint":"eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"},"dependencies":{"axios":"^1.6.7","better-sqlite3":"^9.6.0","cors":"^2.8.5","express":"^4.18.3","lucide-react":"^0.322.0","multer":"^1.4.5-lts.1","react":"^18.2.0","react-dom":"^18.2.0","react-router-dom":"^6.22.0","recharts":"^2.12.0","xlsx":"^0.18.5"},"devDependencies":{"@types/react":"^18.2.55","@types/react-dom":"^18.2.19","@vitejs/plugin-react-swc":"^3.5.0","concurrently":"^8.2.2","cross-env":"^7.0.3","electron":"^29.1.0","electron-builder":"^24.9.1","eslint":"^8.56.0","eslint-plugin-react":"^7.33.2","eslint-plugin-react-hooks":"^4.6.0","eslint-plugin-react-refresh":"^0.4.5","vite":"^5.1.0","wait-on":"^7.2.0"},"build":{"appId":"com.greyhounds.inventory","productName":"Greyhounds Telangana","directories":{"output":"dist-electron"},"files":["dist/**/*","electron/**/*","node_modules/**/*","package.json"],"extraFiles":[],"win":{"target":"zip","icon":"electron/gt_logo.ico"},"npmRebuild":false,"nsis":{"oneClick":true,"allowToChangeInstallationDirectory":true,"createDesktopShortcut":true,"createStartMenuShortcut":true,"shortcutName":"Greyhounds Telangana"},"asar":true,"asarUnpack":["node_modules/better-sqlite3/**/*"]}}
